--- a/MobileLocationAcquisition/MobileLocationAcquisition/Info.plist
+++ b/MobileLocationAcquisition/MobileLocationAcquisition/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>请点击“好”允许应用获取您的位置</string>
 	<key>CFBundleDevelopmentRegion</key>
